# BMI-Calculator-using-Python-UV-and-Streamlit

BMI-Calculator/: README.md  main.py  pyproject.toml
