[project]
name = "bmi-calculator"
version = "0.1.0"
description = "BMI Calculator using Streamlit"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "streamlit"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
